[gd_scene load_steps=34 format=2]

[ext_resource path="res://Platformer/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_04.png" type="Texture" id=2]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_05.png" type="Texture" id=3]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_06.png" type="Texture" id=4]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_07.png" type="Texture" id=5]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_08.png" type="Texture" id=6]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_09.png" type="Texture" id=7]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Attack/Attack_10.png" type="Texture" id=8]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Idle/Idle_01.png" type="Texture" id=9]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Idle/Idle_02.png" type="Texture" id=10]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Idle/Idle_03.png" type="Texture" id=11]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Idle/Idle_04.png" type="Texture" id=12]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Idle/Idle_05.png" type="Texture" id=13]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Idle/Idle_06.png" type="Texture" id=14]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Jump/Jump_01.png" type="Texture" id=15]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Jump/Jump_02.png" type="Texture" id=16]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Jump/Jump_03.png" type="Texture" id=17]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Jump/Jump_04.png" type="Texture" id=18]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Jump/Jump_05.png" type="Texture" id=19]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Jump/Jump_06.png" type="Texture" id=20]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_01.png" type="Texture" id=21]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_02.png" type="Texture" id=22]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_03.png" type="Texture" id=23]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_04.png" type="Texture" id=24]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_05.png" type="Texture" id=25]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_06.png" type="Texture" id=26]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_07.png" type="Texture" id=27]
[ext_resource path="res://Platformer/Assets/TexturePack/SwordyGuy/Run/Run_08.png" type="Texture" id=28]

[sub_resource type="Animation" id=1]
resource_name = "attack_anim"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/attack_anim = SubResource( 1 )
anims/idle_anim = SubResource( 2 )
anims/on_jump = SubResource( 3 )
anims/running_anim = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 22 )
scale = Vector2( 2.5, 3 )
shape = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="InputDelay" type="Timer" parent="."]
wait_time = 0.04
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="InputDelay" to="." method="_on_InputDelay_timeout"]
